# sagas

./: .gitignore  AUTHORS  CHANGELOG.md  ChangeLog  ReadME.md  main.py  setup.cfg  setup.py  setup.sh
.github/workflows/: publish_sagas.yml  test_sagas.yml
examples/: failure.py  success.py
sagas/: __init__.py  event_gather.py  exceptions.py  saga.py  states.py  step.py
tests/: conftest.py  saga_test.py
