[metadata]
name = sagas
author = Kimbugwe Simon Peter
author-email = kimbsimon2@gmail.com
summary = Simple async sagas package
description-file = 
    ReadME.md
    CHANGELOG.md
description-content-type = text/markdown
home-page = https://github.com/kimbugp/sagas
project_urls =
    Source Code = https://github.com/kimbugp/sagas
license = MIT
classifier =
    Intended Audience :: Developers
    Operating System :: OS Independent
    License :: OSI Approved :: MIT License
    Development Status :: 3 - Alpha
    Environment :: Plugins
    Environment :: Console
    Programming Language :: Python
    Programming Language :: Python :: 3
    
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Distributed Systems :: Sagas :: Async

[entry_points]
console_scripts =
    flask-app = main:main